# afmtogmx

./: .gitignore  CLAUDE.md  GEMINI.md  GEMINI_TASKS.md  README.md  TASKS.md  TESTING.md  environment.yml  main.py  pyproject.toml
.claude/: settings.local.json
archive/: README.md  TASKS_2025-12-03_to_2025-12-05.md
src/: main.py
src/afmtogmx/: __init__.py
src/afmtogmx/core/: chargefxns.py  chargefxns_old.py  compare.py  functions.py  gen_md.py  residues.py  tabulated_potentials.py  topology.py
test/: main.py
test/baseline_outputs/test1_methane_basic/: generate_test1.py  temp_nonbonded.top  topol.top
test/baseline_outputs/test2_ethane_bonded/: generate_test2.py  temp_nonbonded.top  topol.top
test/baseline_outputs/test3_water_charges/: generate_test3.py  temp_nonbonded.top  template.top  topol.top
test/baseline_outputs/test4_butanediol_nametrans/: generate_test4.py  temp_nonbonded.top  template.top  topol.top
test/baseline_outputs/test5_methane_scsigma/: generate_test5.py  temp_nonbonded.top  template.top  topol.top
test/baseline_outputs/test6_ethane_exclpairs/: generate_test6.py  temp_nonbonded.top  template.top  topol.top
test/baseline_outputs/test7_methane_config/: charges.txt  generate_test7.py  template.top  topol.top
test/baseline_outputs/test8_ethane_clean_workflow/: charges.txt  generate_test8.py  template.top  topol.top
test/compare/: base.off  compare.off
test/local_tests/: main.py
test/sample_off_files/: big_alanine.off  ethane_intra.off  methane_intra.off  water_intra.off
(+35 files in other folders)
