[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afmtogmx"
version = "0.1.0"
description = "Convert CRYOFF .off files to GROMACS input files"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "junechem", email = "87082719+junechem@users.noreply.github.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["afmtogmx", "afmtogmx.core"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
afmtogmx = ["py.typed"]
